New ion radial integrals [some] and SOCs

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 SMBtesting.ipynb
 SMBtesting-checkpoint.ipynb
 Test cif.cif
+rare test.cif
+Documentation/RadialIntegrals_TM.txt
+Documentation/SpinOrbitCouplingConstants_TM.txt
