--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Test cif.cif
 rare test.cif
 Documentation/RadialIntegrals_TM.txt
 Documentation/SpinOrbitCouplingConstants_TM.txt
+~$Ion data.xlsx
+Convert Cowan to angstroms.nb
